--- a/arch/x86/configs/jupiter_defconfig
+++ b/arch/x86/configs/jupiter_defconfig
@@ -2498,8 +2498,9 @@ CONFIG_MEN_A21_WDT=m
 CONFIG_PCIPCWATCHDOG=m
 CONFIG_WDTPCI=m
 CONFIG_USBPCWATCHDOG=m
-CONFIG_SSB_PCMCIAHOST=y
+CONFIG_SSB=y
 CONFIG_SSB_DRIVER_GPIO=y
+CONFIG_BCMA=y
 CONFIG_BCMA_DRIVER_GMAC_CMN=y
 CONFIG_BCMA_DRIVER_GPIO=y
 CONFIG_MFD_AS3711=y
@@ -3404,28 +3405,27 @@ CONFIG_USB_HIDDEV=y
 CONFIG_INTEL_ISH_HID=m
 CONFIG_INTEL_ISH_FIRMWARE_DOWNLOADER=m
 CONFIG_USB_LED_TRIG=y
-CONFIG_USB_CONN_GPIO=m
+CONFIG_USB_CONN_GPIO=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_OTG=y
 CONFIG_USB_LEDS_TRIGGER_USBPORT=y
 CONFIG_USB_MON=y
 CONFIG_USB_C67X00_HCD=y
 CONFIG_USB_XHCI_HCD=y
-CONFIG_USB_XHCI_PCI_RENESAS=m
+CONFIG_USB_XHCI_PCI_RENESAS=y
 CONFIG_USB_EHCI_HCD=y
-CONFIG_USB_EHCI_FSL=m
-CONFIG_USB_OXU210HP_HCD=m
-CONFIG_USB_ISP116X_HCD=m
-CONFIG_USB_FOTG210_HCD=m
-CONFIG_USB_MAX3421_HCD=m
+CONFIG_USB_EHCI_FSL=y
+CONFIG_USB_OXU210HP_HCD=y
+CONFIG_USB_ISP116X_HCD=y
+CONFIG_USB_FOTG210_HCD=y
+CONFIG_USB_MAX3421_HCD=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_UHCI_HCD=y
-CONFIG_USB_U132_HCD=m
-CONFIG_USB_SL811_HCD=m
-CONFIG_USB_SL811_CS=m
-CONFIG_USB_R8A66597_HCD=m
-CONFIG_USB_HCD_BCMA=m
-CONFIG_USB_HCD_SSB=m
+CONFIG_USB_U132_HCD=y
+CONFIG_USB_SL811_HCD=y
+CONFIG_USB_R8A66597_HCD=y
+CONFIG_USB_HCD_BCMA=y
+CONFIG_USB_HCD_SSB=y
 CONFIG_USB_ACM=y
 CONFIG_USB_PRINTER=y
 CONFIG_USB_WDM=y
@@ -3445,13 +3445,13 @@ CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_STORAGE_ENE_UB6250=y
 CONFIG_USB_UAS=y
-CONFIG_USB_MDC800=m
-CONFIG_USB_MICROTEK=m
-CONFIG_USBIP_CORE=m
-CONFIG_USBIP_VHCI_HCD=m
-CONFIG_USBIP_HOST=m
-CONFIG_USBIP_VUDC=m
-CONFIG_USB_MUSB_HDRC=m
+CONFIG_USB_MDC800=y
+CONFIG_USB_MICROTEK=y
+CONFIG_USBIP_CORE=y
+CONFIG_USBIP_VHCI_HCD=y
+CONFIG_USBIP_HOST=y
+CONFIG_USBIP_VUDC=y
+CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_ULPI=y
 CONFIG_USB_DWC2=y
@@ -3461,6 +3461,7 @@ CONFIG_USB_CHIPIDEA=y
 CONFIG_USB_CHIPIDEA_UDC=y
 CONFIG_USB_CHIPIDEA_HOST=y
 CONFIG_USB_ISP1760=y
+CONFIG_USB_USS720=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CONSOLE=y
 CONFIG_USB_SERIAL_GENERIC=y
@@ -3546,9 +3547,9 @@ CONFIG_USB_SPEEDTOUCH=m
 CONFIG_USB_CXACRU=m
 CONFIG_USB_UEAGLEATM=m
 CONFIG_USB_XUSBATM=m
-CONFIG_USB_GPIO_VBUS=m
+CONFIG_USB_GPIO_VBUS=y
 CONFIG_TAHVO_USB=m
-CONFIG_USB_ISP1301=m
+CONFIG_USB_ISP1301=y
 CONFIG_USB_GADGET=y
 CONFIG_U_SERIAL_CONSOLE=y
 CONFIG_USB_FOTG210_UDC=m
